# MyLibrary

./: .gitignore  Dockerfile  GITHUB_SETUP.md  LICENSE  MyLibrary.bat  MyLibrary.spec  README.md  build_log.txt  config.example.json  main.py  mylib_log.txt  pyproject.toml  release_github.bat  requirements.txt  update_github.bat  创建桌面快捷方式.bat  启动.bat  安卓一键部署.sh  安装与迁移指南.md
.github/workflows/: build-windows-exe.yml  ci.yml
docs/: GitHub上传指南.md  完整需求核对.md  总体规划与进度.md  更新日志.md  更新说明_本轮.md  本轮更新_第11批_阅读修复与悬浮球.md  本轮更新_第12批_树与手账本.md  本轮更新_第13批_入库与适配.md  本轮更新_第14批_阅读体验.md  本轮更新_第15批_修回归与清理.md  本轮更新_第17批_手账本排版与图标.md  本轮更新_第18批_章节查重与自动收拢.md  本轮更新_第19批_笔记排序与整体检查.md  本轮更新_第20批_笔记跳转与书单分享.md  本轮更新_第21批_历程小窗与找回作者.md  本轮更新_第23批_v3收尾.md  本轮更新_第24批_手机端与分页.md  本轮更新_第26批_翻页+声音+图标+找回作者.md  本轮更新_第27批_搜索+筛选折叠+三态已读+自定义标签.md  本轮更新_第28批_去重报错+标签删除+拖动分类.md  本轮更新_第29批_为什么你看不到更新+图标.md  本轮更新_第2批.md  本轮更新_第30批_独立应用窗口.md  本轮更新_第31批_加载失败诊断+独立窗口等待.md  本轮更新_第32批_启动有进度反馈.md  本轮更新_第33批_无黑窗也能看到失败原因.md  本轮更新_第34批_修复无黑窗启动崩溃.md  本轮更新_第35批_独立窗口诊断.md  本轮更新_第36批_快捷方式开独立窗口.md  本轮更新_第3批_管理修复.md  本轮更新_第4批_题材与编辑.md  本轮更新_第5批_筛选与XP标签.md  本轮更新_第6批_玩法与装扮.md  本轮更新_第8批_导入与版本与备份.md  本轮更新_阅读修复与设置.md  重构计划清单.md  需求审计.md
docs/archive/: 本轮更新_v3.50.0.md  (+78 more)
mylib/: __init__.py
scripts/: build_exe.bat  install.py  launcher.py  打包成exe指南.md
tests/: conftest.py  smoke_theme.js  test_api.py  test_core.py  test_pages.py  test_quill_features.py  test_v45_features.py  test_v4614_features.py  test_v461_hotfix.py  test_v462_features.py  test_v465_features.py  test_v466_features.py  test_v467_features.py  test_v46_features.py
(+59 files in other folders)
